--- a/css/styleprincipal.css
+++ b/css/styleprincipal.css
@@ -118,7 +118,7 @@
   
   .title {
     font-size: 380%;
-    margin-top: 10%;
+    margin-top: 3%;
     font-family: "Lexend Exa", sans-serif;
     text-align: left;
   }
@@ -136,7 +136,7 @@
     border: 1px solid #ddd;
     border-radius: 10px;
     padding: 20px;
-    width: 45%;
+    width: 50%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     font-size: 30px;
   }
@@ -145,9 +145,9 @@
     display: flex;
     gap: 256px;
     text-align: left;
-    margin-top: 5%;
+    margin-top: 1%;
     margin-left: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     max-width: 100%;
   }
   
@@ -156,14 +156,14 @@
     margin-right: 10%;
     text-align: right;
     margin-bottom: 18vh;
-    margin-top: 5%;
+    margin-top: 1%;
     max-width: 100%;
   }
   
   .description1 {
     font-family: "Lexend Exa" , sans-serif;
     text-align: left;
-    max-width: 50%;
+    max-width: 70%;
     margin-left: 5%;
     font-size: 23px;
     margin-top: 2%;
@@ -172,26 +172,26 @@
   .description2 {
     display: flex;
     font-family: "Lexend Exa", sans-serif;
-    text-align: right;
+    text-align: left;
     max-width: 44%;
     font-size: 23px;
-    margin-left: 14%;
+    margin-left: 20%;
     margin-top: 2%;
   }
   
   .icon1{
-    width: 22%;
-    height: 22%;
+    width: 30%;
+    height: 30%;
     border-radius: 45px;
     transform: rotate(50deg);
-    margin-right: 20%;
+    margin-right: 10%;
     filter: brightness(0.96);
   }
   .icon2{
-    width: 22%;
-    height: 22%;
+    width: 30%;
+    height: 30%;
     border-radius: 45px;
-    margin-left: 20%;
+    margin-left: 10%;
     filter: brightness(0.96) ;
   }
   
