--- a/css/styleprincipal.css
+++ b/css/styleprincipal.css
@@ -239,16 +239,16 @@
   }
   .titulocarrossel {
     position: absolute;
-    top: 10%; /* Posiciona o título no topo do carrossel */
+    top: 10%; 
     right: 25%;
-    width: 100%; /* Garante que o título ocupe toda a largura */
-    text-align: start; /* Centraliza o texto horizontalmente */
-    z-index: 3; /* Garante que o título fique acima dos itens */
+    width: 100%; 
+    text-align: start; 
+    z-index: 3;
   }
   
   .titulocarrossel h1 {
-    font-size: 300%; /* Ajuste o tamanho conforme necessário */
-    color: #fff; /* Escolha uma cor visível */
+    font-size: 300%; 
+    color: #fff;
   }
   
   .item.active {
@@ -320,31 +320,32 @@
   .text {
     padding-left: 8%;
     padding-right: 15%;
-  
+    margin-bottom: 10vh;
+
   }
   
   .text h1 {
     font-size: 300%;
     margin-bottom:5%;
-    color: #333;
+    color: var(--letraazul);
     font-family: "Lexend Exa", sans-serif;
   }
   
   .text p {
     line-height: 1.6;
-    color: #666;
+    color: #131212;
     text-align: justify;
-    margin-bottom: 20px;
+    margin-bottom: 10vh;
     font-family: "Lexend Exa", sans-serif;
   }
    /* impactos */
-  .content {
-    margin-top: 10%;
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      margin-bottom: 30px;
-    }
+.content {
+  margin-top: 20%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 30px;
+  }
   
     .texto1 {
       margin-top: 10%;
@@ -490,26 +491,25 @@
   
   .quiz-card {
     background-color: #405e5f;
+    font-family: "Lexend Exa", sans-serif;
     border-radius: 16vh;
-    padding: 30px;
+    padding: 5vh;
     text-align: center;
     justify-items: center;
     max-width: 75%;
     height: 50vh;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 5%;
+    margin-top: 10%;
   }
   
   .quiz-card h1 {
     color: #ffffff;
-    font-family: "Rareway" , sans-serif;
     font-size: 80px;
     margin-bottom: 15px;
   }
   
   .quiz-card p {
-    font-family: "Rareway" , sans-serif;
     color: #d1d1d1;
     font-size: 25px;
     line-height: 1.5;
@@ -521,14 +521,14 @@
    .quiz-card .botaoquiz {
     display: flex;
     background-color: #747d81;
-    font-family: "Rareway" sans-serif;
+    font-family: "Lexend Exa", sans-serif;
     color: #ffffff;
     text-align: center;
     justify-content: center;
     border: none;
     border-radius: 20vh;
-    padding: 10px 20px;
-    font-size: 50px;
+    padding: 10px 10px 15px 10px;
+    font-size: 40px;
     cursor: pointer;
     height: 12vh;
     width: 50vh;
@@ -542,6 +542,7 @@
   
 /* Footer */
   .rodapé {
+    font-family: "Lexend Exa", sans-serif;
     margin-top: 10%;
     background-color: var(--azulmeioescuro); 
     color: white;
